--- a/dashboard.html
+++ b/dashboard.html
@@ -351,7 +351,7 @@ body {
       <img src="user.png" alt="Profile Picture" class="profile-img">
       <span class="greeting" style="font-size: 15px;">Hi, <span id="inputValue"></span></span>
     </div>
-    <a href="https://api.whatsapp.com/send?phone=2348056620993&text=Hye%20admin%20I%20am%20a%20user%20of%20Smart%20Earn%20v.2024">
+    <a href="mailto:Smartearn2025@gmail.com?subject=Hello%20World&body=This%20is%20a%20test%20email&cc=anotheremail@example.com">
       <div class="chat-icon">
         <img src="chat.png" alt="Chat Icon">
       </div>
@@ -372,9 +372,8 @@ body {
       <img src="menu.jpeg" alt="Menu" class="menu" id="menuImage" style="margin-top: 4px;">
       <div class="menu-popup" id="menuPopup">
         <a id="checkService">Check Services <span style="color: green; font-weight: bold; font-size: 25px;">•</span></a>
-        <a href="https://api.whatsapp.com/send?phone=2348056620993&text=Hye%20admin%20I%20am%20a%20user%20of%20Smart%20Earn%20v.2024">Chat</a>
-        <a href="https://chat.whatsapp.com/HcmQclrHZC4E1NOzhbjuan">Join Platform?</a>
-        <a href="https://api.whatsapp.com/send?phone=2348056620993&text=Hye%20admin%20I%20am%20a%20user%20of%20Smart%20Earn%20v.2024">WhatsApp</a>
+        <a href="mailto:Smartearn2025@gmail.com?subject=Hello%20World&body=This%20is%20a%20test%20email&cc=anotheremail@example.com">Chat</a>
+       href="mailto:Smartearn2025@gmail.com?subject=Hello%20World&body=This%20is%20a%20test%20email&cc=anotheremail@example.com">Email</a>
       </div>
     </div>
     <div class="amount" id="balance">₦30,502.00</div>
