--- a/login.html
+++ b/login.html
@@ -111,12 +111,4 @@
             </div>
             </div>
             
-            <p onclick="p()">HyBridTech <strong>&copy;</strong></p>
-<script>
-  function p() {
-    window.location.href = 'https://api.whatsapp.com/send?phone=2349015674515&text=Hye%20admin%20I%20am%20a%20user%20of%20Smart%20Earn%20v.2024'
-  }
-</script>
-</body>
-
-</html>
+            <p onclick="p()">Smart earn 2025 <strong>&copy;</strong></p>
