--- a/pay.html
+++ b/pay.html
@@ -233,9 +233,9 @@ button {
             </div>
             <div id="confirmationContainer" class="confirmation">
               <br><br>
-                <img src="done.png" alt="Success" style="width: 60px;">
-                <p style="font-size: 18px; color: red;">Payment Confirmed!</p>
-       <p style="font-weight: lighter; color: #7F8082;">Your transfer has been sent and confirmed, You will receive your first cash out from smart earn shortly.</p>
+                <img src="err.png" alt="Success" style="width: 60px;">
+                <p style="font-size: 18px; color: red;">Payment Not Confirmed!</p>
+       <p style="font-weight: lighter; color: #7F8082;">Your transfer has not been received please check the account number, and try again.</p>
             </div>
         </center>
       
@@ -295,5 +295,4 @@ document.getElementById("payButton").onclick = function() {
 };
     </script>
 </body>
-    </html>
-            
+</html>
