--- a/pay.html
+++ b/pay.html
@@ -196,8 +196,9 @@ button {
 <body>
     <div class="container" id="animatedContainer">
         <div class="con">
-            <img src="go.jpg" alt="f.png" style="width: 40px; clip-path: circle();">
-            <span style="color: #7F8082; padding-bottom: 15px; font-size: 13px;">GoMoney Bank Checkout</span>
+            <img src="mor.jpg" alt="mor.jpg" style="width: 40px; clip-path: circle();">
+            <span style="color: #7F8082; padding-bottom: 15px; font-size: 13px;">Gateway mortgage bank 
+ Checkout</span>
             <a href="dashboard.html" class="close">X</a>
             <br>
         </div>
@@ -212,16 +213,17 @@ button {
             <div class="second">
                 <p style="font-size:14px; color: #000; font-weight: lighter; padding-top: 7px;">Transfer to the below details</p>
                 <div class="third" style="padding-top: 10px;">
-                    <strong style="color: #07394F; font-size: 14px;">BANK NAME: &nbsp;&nbsp; GoMoney Bank </strong>
+                    <strong style="color: #07394F; font-size: 14px;">BANK NAME: &nbsp;&nbsp; Gateway mortgage bank 
+ </strong>
                     <br><br>
                     <span style="color: #B4CBD5; font-weight: lighter; font-size: 13px;">Account Number</span><br>
-                    <span id="accountNumber">8504210188 &nbsp; &nbsp; 
+                    <span id="accountNumber">1000435442 &nbsp; &nbsp; 
                         <i class="fa-regular fa-copy" style="font-size: 18px;" onclick="copyAccountNumber()"></i>
                     </span>
                     <br><br>
                     <span style="color: #B4CBD5; font-weight: lighter; font-size: 13px;">Account Name</span>
                     <br>
-                    <strong style="color: #678692; font-size: 15px;">smartearn agent                    </strong>   
+                    <strong style="color: #678692; font-size: 15px;">Samuel Jude chijindu                    </strong>   
                     <p>Make a quick transfer to this above account number</p>
                 </div>
             </div>
