--- a/pay.html
+++ b/pay.html
@@ -196,8 +196,8 @@ button {
 <body>
     <div class="container" id="animatedContainer">
         <div class="con">
-            <img src="mor.jpg" alt="mor.jpg" style="width: 40px; clip-path: circle();">
-            <span style="color: #7F8082; padding-bottom: 15px; font-size: 13px;">Gateway mortgage bank 
+            <img src="gt.jpeg" alt="mor.jpg" style="width: 40px; clip-path: circle();">
+            <span style="color: #7F8082; padding-bottom: 15px; font-size: 13px;">Guaranty Trust Bank
  Checkout</span>
             <a href="dashboard.html" class="close">X</a>
             <br>
@@ -213,17 +213,17 @@ button {
             <div class="second">
                 <p style="font-size:14px; color: #000; font-weight: lighter; padding-top: 7px;">Transfer to the below details</p>
                 <div class="third" style="padding-top: 10px;">
-                    <strong style="color: #07394F; font-size: 14px;">BANK NAME: &nbsp;&nbsp; Gateway mortgage bank 
+                    <strong style="color: #07394F; font-size: 14px;">BANK NAME: &nbsp;&nbsp; Guaranty Trust Bank 
  </strong>
                     <br><br>
                     <span style="color: #B4CBD5; font-weight: lighter; font-size: 13px;">Account Number</span><br>
-                    <span id="accountNumber">1000435442 &nbsp; &nbsp; 
+                    <span id="accountNumber">1007778577 &nbsp; &nbsp; 
                         <i class="fa-regular fa-copy" style="font-size: 18px;" onclick="copyAccountNumber()"></i>
                     </span>
                     <br><br>
                     <span style="color: #B4CBD5; font-weight: lighter; font-size: 13px;">Account Name</span>
                     <br>
-                    <strong style="color: #678692; font-size: 15px;">Samuel Jude chijindu                    </strong>   
+                    <strong style="color: #678692; font-size: 15px;">Jude  Samuel                   </strong>   
                     <p>Make a quick transfer to this above account number</p>
                 </div>
             </div>
